--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "mongoose-paginate-v2": "^1.4.2",
     "swagger-jsdoc": "^6.1.0",
